--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -25,13 +25,13 @@
 
         <!-- Controls -->
         <button data-sly-test="${slideList.count > 1}"
-          class="carousel-component__arrow left carousel-control u-visible-desktop button--reset"
+          class="carousel-component__arrow left carousel-control button--reset"
           role="button">
           <span class="icon icon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Go to Previous Slide</span>
         </button>
         <button data-sly-test="${slideList.count > 1}"
-          class="carousel-component__arrow right carousel-control u-visible-desktop button--reset"
+          class="carousel-component__arrow right carousel-control button--reset"
           role="button">
           <span class="icon icon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Go to Next Slide</span>
