--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -8,6 +8,8 @@
 
 .carousel-component-slide__title { font-size: 3.25em; line-height: 1.192em; margin: 0; }
 
+.carousel-component__arrow { display: none; }
+
 .carousel-component__dots:only-child { display: none; }
 
 .carousel-component__down-arrow { position: absolute; bottom: 25px; color: #FFF; width: 100%; font-size: 1.5em; z-index: 10; text-align: center; }
@@ -19,6 +21,7 @@
 
 @media screen and (min-width: 992px) { .carousel-component-slide__caption { top: 10%; }
   .carousel-component-slide__cta { margin-top: 60px; }
+  .carousel-component:hover .carousel-component__arrow { display: block; }
   .carousel-component .carousel-indicators { bottom: 20px; } }
 
 .eaton-landing-hero--single .carousel-component-slide__caption { position: absolute; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); bottom: auto; }
