EATON 215-216 (Fix icons size + Remove fixed height on mega menu )

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -45,8 +45,7 @@
   .nav-open.level-2-open { overflow: hidden; position: fixed; width: 100%; }
   .nav-open.level-2-open .mega-menu { visibility: visible; -webkit-transform: translate(0); transform: translate(0); } }
 
-@media screen and (min-width: 992px) { .nav-open.level-2-open .mega-menu { visibility: visible; opacity: 1; }
-  .nav-open.level-2-open .eaton-header--fixed .mega-menu { overflow-y: auto; height: 550px; } }
+@media screen and (min-width: 992px) { .nav-open.level-2-open .mega-menu { visibility: visible; opacity: 1; } }
 
 .aem-AuthorLayer-Edit .mega-menu, .cq-wcm-edit .mega-menu { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
 
