--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -5,7 +5,6 @@
 .eaton-link-list-primary-nav {
 
   &__items {
-    font-family: 'EatonMedium';
 
     a {
       text-decoration: none;
@@ -17,7 +16,7 @@
   // ----------------------------
   @include media-mobile-and-tablet {
     position: fixed;
-    top: 109px;
+    top: 60px;
     bottom: 40px;
     width: 100%;
     left: 0;
@@ -30,26 +29,32 @@
 
     &__headline {
       display: block;
-      padding: 60px 30px;
-      font-size: 40px;
-      line-height: 50px;
+      // padding: $spacing__sm ($spacing__sm / 2);
+      padding: $spacing__sm 0;
+      font-size: 25px;
+      line-height: 30px;
       background: $color__primary-gray1;
       margin-bottom: 0;
+      font-family: 'EatonMedium';
     }
 
     &__items {
       height: 100%;
       width: 100%;
-      padding: 30px;
+      // padding: 0 ($spacing__sm / 2);
+      padding: 0;
+      font-family: Arial;
 
       a {
         display: block;
-        margin: 30px 0;
-        padding: 30px 0;
+        padding: $spacing__sm 0;
         color: $color__white;
         cursor: pointer;
+        border-bottom: 1px solid $color__secondary-gray2;
+        font-size: 20px;
 
         &:first-child { margin-top: 0; }
+        &:last-child { border-bottom: 0; }
       }
     }
 
@@ -73,6 +78,10 @@
       margin-right: 15px;
     }
 
+    &__container {
+      width: auto;
+    }
+    
     &__headline {
       display: none;
     }
@@ -82,6 +91,7 @@
       height: 100px;
       align-items: center;
       justify-content: flex-end;
+      font-family: 'EatonMedium';
 
       a {
         margin: 0 15px;
