--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -32,9 +32,9 @@
 
 .eaton-link-list-primary-nav__items a { text-decoration: none; }
 
-@media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 60px; bottom: 40px; width: 100%; left: 0; height: 0; visibility: hidden; overflow: hidden; background: #5B6770; color: #FFF; -webkit-transition: height 0.7s ease-in-out; transition: height 0.7s ease-in-out; }
+@media screen and (max-width: 991px) { .eaton-link-list-primary-nav { position: fixed; top: 60px; bottom: 40px; width: 100%; left: 0; height: 0; visibility: hidden; overflow: hidden; background: #5B6770; color: #FFF; -webkit-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out; }
   .eaton-link-list-primary-nav__headline { display: block; padding: 30px 0; font-size: 25px; line-height: 30px; background: #333F48; margin-bottom: 0; font-family: 'EatonMedium'; }
-  .eaton-link-list-primary-nav__items { height: 100%; width: 100%; padding: 0; font-family: Arial; }
+  .eaton-link-list-primary-nav__items { height: 100%; width: 100%; padding: 0; font-family: Arial; min-height: 600px; }
   .eaton-link-list-primary-nav__items a { display: block; padding: 30px 0; color: #FFF; cursor: pointer; border-bottom: 1px solid #EEF0F2; font-size: 20px; }
   .eaton-link-list-primary-nav__items a:first-child { margin-top: 0; }
   .eaton-link-list-primary-nav__items a:last-child { border-bottom: 0; }
