--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -44,7 +44,8 @@
 
 .mega-menu-title__close-menu { display: none; }
 
-@media screen and (max-width: 991px) { .mega-menu-title__level1-link .glyphicon-menu-left { display: inline; margin-right: 10px; }
+@media screen and (max-width: 991px) { .mega-menu-title { min-height: 90px; }
+  .mega-menu-title__level1-link .glyphicon-menu-left { display: inline; margin-right: 10px; }
   .mega-menu-title__level1-link .glyphicon-menu-right { display: none; } }
 
 @media screen and (min-width: 992px) { .mega-menu-title__level1-link .glyphicon-menu-left { display: none; }
