M-42 top list with icon

--- a/eaton.frontend/src/components/list/css/list.scss
+++ b/eaton.frontend/src/components/list/css/list.scss
@@ -6,3 +6,4 @@
 @import 'views/view-featured-article';
 @import 'views/view-article-list-single-feature';
 @import 'views/view-links';
+@import 'views/view-top-list-with-icon';
