--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-article-list-single-feature.html
@@ -6,8 +6,8 @@
                     <img src="${data.single_feature_card.image}" class="img-responsive category__image" alt="${data.single_feature_card.image_alt}"/>
                 </div>
                 <div class="category__item--border category__item-innerpadding related-category--tablet-right">
-                    <p class="related-category__title--font category__title--bottompadding">${data.single_feature_card.title}</p>
-                    <p class="category__link--font">${data.single_feature_card.text}</p>
+                    <p class="b-eyebrow-large category__title--bottompadding">${data.single_feature_card.title}</p>
+                    <p class="b-h4-link">${data.single_feature_card.text}</p>
                     <p class="category-item-date"><em>${data.single_feature_card.date_text}</em></p>
                 </div>
             </a>
@@ -16,8 +16,8 @@
             <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link">
                 <span class="article-list-single-feature--border"></span>
                 <div class="article-list-single-feature__article--copy">
-                    <p class="related-category__title--font category__title--bottompadding">${card.title}</p>
-                    <p class="category__link--font">${card.text}</p>
+                    <p class="b-eyebrow-small category__title--bottompadding">${card.title}</p>
+                    <p class="b-h4-link">${card.text}</p>
                     <p class="category-item-date"><em>${card.date_text}</em></p>
                 </div>
             </a>
