--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -12,7 +12,7 @@
                             <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                         </div>
                         <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
-                            <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
+                            <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
                             <div class="category__link--font">${slider.text}</div>
                             <p data-sly-test="${data.cards.length == 3}" class="category-item-date"><em>${slider.date_text}</em></p>
                         </div>
@@ -30,7 +30,7 @@
                             <div>
                                 <img src="${slider.mobile_image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
                                 <div class="category__item--border category__item-innerpadding carousel__item">
-                                    <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
+                                    <div class="b-eyebrow-small category__title--bottompadding">${slider.title}</div>
                                     <h5 class="category__link--font">${slider.text}</h5>
                                     <p data-sly-test="${data.cards.length == 3}" class="category-item-date"><em>${slider.date_text}</em></p>
                                 </div>
