--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -154,6 +154,10 @@ h4, .b-heading-h4 { margin-top: 0; }
 
 h5, .b-heading-h5 { margin-top: 0; }
 
+.b-h4-link { font-size: 1.375em; color: #005EB8; }
+
+@media screen and (min-width: 992px) { .b-h4-link { font-size: 1.625em; } }
+
 .u-flex { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 .u-inline-flex { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; }
