Update Proof Points - Data structure + Markup + Create initial files - Highlights

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
@@ -7,13 +7,12 @@
           <div data-sly-list="${ data.items }">
             <div class="col-xs-12 col-md-4 icon-list-proof-points__item">
               <div class="icon-list-proof-points__image">
-                <img src="${item.img}" alt="${item.facts} ${item.relatedText}" />
+                <img src="${item.image}" alt="${item.title}" />
               </div>
-              
+
               <div class="icon-list-proof-points__content">
-                <div class="icon-list-proof-points__facts">${item.facts}</div>
-                <div data-sly-test="${item.factSymbol}" class="icon-list-proof-points__symbol">${item.factSymbol}</div>
-                <div class="icon-list-proof-points__related">${item.relatedText}</div>
+                <div class="icon-list-proof-points__text">${item.tcsText @context = 'html'}</div>
+                <div class="icon-list-proof-points__title">${item.title}</div>
               </div>
             </div>
           </div>
