--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -18,8 +18,7 @@
     padding-left: 40px;
   }
 
-  &__facts,
-  &__symbol {
+  &__text {
     font-weight: bold;
     display: inline-block;
     color: $color__accent-aqua;
@@ -54,7 +53,7 @@
       font-size: 83px;
     }
 
-    &__related {
+    &__title {
       font-size: 18px;
     }
   }
@@ -72,7 +71,7 @@
       top: -20px;
     }
 
-    &__related {
+    &__title {
       font-size: 24px;
     }
   }
