--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -6,7 +6,7 @@
 
 .icon-list-proof-points__content { padding-left: 40px; }
 
-.icon-list-proof-points__facts, .icon-list-proof-points__symbol { font-weight: bold; display: inline-block; color: #00B2A9; }
+.icon-list-proof-points__text { font-weight: bold; display: inline-block; color: #00B2A9; }
 
 .icon-list-proof-points__facts { line-height: 1; margin-left: -3px; }
 
@@ -15,10 +15,10 @@
 @media screen and (max-width: 991px) { .icon-list-proof-points__item { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 40px; }
   .icon-list-proof-points__item:last-child { margin-bottom: 0; }
   .icon-list-proof-points__facts { font-size: 83px; }
-  .icon-list-proof-points__related { font-size: 18px; } }
+  .icon-list-proof-points__title { font-size: 18px; } }
 
 @media screen and (min-width: 992px) { .icon-list-proof-points__facts { font-size: 75px; }
   .icon-list-proof-points__symbol { font-size: 45px; top: -20px; }
-  .icon-list-proof-points__related { font-size: 24px; } }
+  .icon-list-proof-points__title { font-size: 24px; } }
 
 .icon-list { padding: 30px 0; }
