--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
@@ -11,6 +11,7 @@
               </div>
 
               <div class="icon-list-proof-points__content">
+                <!--/* Post integration - to be mapped with ${item.text} */-->
                 <div class="icon-list-proof-points__text">${item.tcsText @context = 'html'}</div>
                 <div class="icon-list-proof-points__title">${item.title}</div>
               </div>
