--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -6,19 +6,20 @@
 
 .icon-list-proof-points__content { padding-left: 40px; }
 
-.icon-list-proof-points__text { font-weight: bold; display: inline-block; color: #00B2A9; }
+.icon-list-proof-points__text { font-weight: bold; display: inline-block; color: #00B2A9; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.icon-list-proof-points__facts { line-height: 1; margin-left: -3px; }
+.icon-list-proof-points__fact { line-height: 1; margin-left: -3px; }
 
-.icon-list-proof-points__symbol { position: relative; right: 0; font-size: 50px; top: -30px; }
+.icon-list-proof-points__symbol { position: relative; }
 
 @media screen and (max-width: 991px) { .icon-list-proof-points__item { -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 40px; }
   .icon-list-proof-points__item:last-child { margin-bottom: 0; }
-  .icon-list-proof-points__facts { font-size: 83px; }
+  .icon-list-proof-points__fact { font-size: 83px; }
+  .icon-list-proof-points__symbol { font-size: 40px; top: -6px; }
   .icon-list-proof-points__title { font-size: 18px; } }
 
-@media screen and (min-width: 992px) { .icon-list-proof-points__facts { font-size: 75px; }
-  .icon-list-proof-points__symbol { font-size: 45px; top: -20px; }
+@media screen and (min-width: 992px) { .icon-list-proof-points__fact { font-size: 75px; }
+  .icon-list-proof-points__symbol { font-size: 45px; top: -6px; }
   .icon-list-proof-points__title { font-size: 24px; } }
 
 .icon-list { padding: 30px 0; }
