Configure Views + Data - to match Proof Point construct

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
@@ -7,8 +7,9 @@
           <div data-sly-list="${ data.items }">
             <div class="col-xs-12 col-md-4 icon-list-no-image-highlights__item">
               <div class="icon-list-no-image-highlights__content">
+                <!--/* Post integration - to be mapped with ${item.text} */-->
                 <div class="icon-list-no-image-highlights__title">${item.title}</div>
-                <div class="icon-list-no-image-highlights__text">${item.text @ context = 'html'}</div>
+                <div class="icon-list-no-image-highlights__text">${item.tcsText @context = 'html'}</div>
               </div>
             </div>
           </div>
