--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -23,3 +23,5 @@
   .icon-list-proof-points__title { font-size: 24px; } }
 
 .icon-list { padding: 30px 0; }
+
+.icon-list:before { display: none; }
