--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -6,7 +6,7 @@
 
 .icon-list-proof-points__content { padding-left: 40px; }
 
-.icon-list-proof-points__text { font-weight: bold; display: inline-block; color: #00B2A9; display: -webkit-box; display: -ms-flexbox; display: flex; margin-left: -3px; }
+.icon-list-proof-points__text { font-weight: bold; color: #00B2A9; display: -webkit-box; display: -ms-flexbox; display: flex; margin-left: -3px; }
 
 .icon-list-proof-points__symbol { position: relative; }
 
@@ -20,6 +20,23 @@
   .icon-list-proof-points__symbol { font-size: 45px; top: 8px; }
   .icon-list-proof-points__title { font-size: 24px; } }
 
+.icon-list-no-image-highlights { background: #F8F8F8; }
+
+.icon-list-no-image-highlights__item { display: -webkit-box; display: -ms-flexbox; display: flex; color: #5B6770; }
+
+.icon-list-no-image-highlights__content { text-align: center; }
+
+.icon-list-no-image-highlights__title { text-transform: uppercase; font-weight: bold; }
+
+.icon-list-no-image-highlights__symbol { position: relative; }
+
+@media screen and (max-width: 991px) { .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; } }
+
+@media screen and (min-width: 992px) { .icon-list-no-image-highlights { padding: 42px 0; }
+  .icon-list-no-image-highlights__text { font-size: 60px; line-height: 65px; }
+  .icon-list-no-image-highlights__symbol { font-size: 40px; top: -15px; }
+  .icon-list-no-image-highlights__title { font-size: 18px; margin-bottom: 15px; } }
+
 .icon-list { padding: 30px 0; }
 
-.icon-list:before { display: none; }
+.icon-list::before { display: none; }
