--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -6,7 +6,6 @@
   background: $color__secondary-gray3;
 
   &__item {
-    display: flex;
     color: $color__primary-gray2;
   }
 
@@ -31,8 +30,9 @@
   // Media-Query: Mobile
   //-----------------------------------
   @include media-mobile-and-tablet {
+    padding: 30px 0;
     &__item {
-
+      margin-bottom: 40px;
 
       &:last-child {
         margin-bottom: 0;
@@ -40,14 +40,18 @@
     }
 
     &__text {
-
+      font-size: 50px;
+      line-height: 55px;
     }
 
     &__symbol {
-
+      font-size: 30px;
+      top: -15px;
     }
 
     &__title {
+      font-size: 14px;
+      margin-bottom: 5px;
     }
   }
 
