--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -22,7 +22,7 @@
 
 .icon-list-no-image-highlights { background: #F8F8F8; }
 
-.icon-list-no-image-highlights__item { display: -webkit-box; display: -ms-flexbox; display: flex; color: #5B6770; }
+.icon-list-no-image-highlights__item { color: #5B6770; }
 
 .icon-list-no-image-highlights__content { text-align: center; }
 
@@ -30,7 +30,12 @@
 
 .icon-list-no-image-highlights__symbol { position: relative; }
 
-@media screen and (max-width: 991px) { .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; } }
+@media screen and (max-width: 991px) { .icon-list-no-image-highlights { padding: 30px 0; }
+  .icon-list-no-image-highlights__item { margin-bottom: 40px; }
+  .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; }
+  .icon-list-no-image-highlights__text { font-size: 50px; line-height: 55px; }
+  .icon-list-no-image-highlights__symbol { font-size: 30px; top: -15px; }
+  .icon-list-no-image-highlights__title { font-size: 14px; margin-bottom: 5px; } }
 
 @media screen and (min-width: 992px) { .icon-list-no-image-highlights { padding: 42px 0; }
   .icon-list-no-image-highlights__text { font-size: 60px; line-height: 65px; }
