Icon-List: Modify styles + markup - to add wrapper for items

--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -60,6 +60,10 @@
   // Media-Query: Desktop
   //-----------------------------------
   @include media-desktop-and-up {
+    &__wrapper {
+      display: flex;
+    }
+    
     &__text {
       font-size: 75px;
     }
