--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
           <!--/* Icon List */-->
-          <div data-sly-list="${ data.items }">
+          <div class="icon-list-no-image-highlights__wrapper" data-sly-list="${ data.items }">
             <div class="col-xs-12 col-md-4 icon-list-no-image-highlights__item">
               <div class="icon-list-no-image-highlights__content">
                 <!--/* Post integration - to be mapped with ${item.text} */-->
