--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-proof-points.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
           <!--/* Icon List */-->
-          <div data-sly-list="${ data.items }">
+          <div class="icon-list-proof-points__wrapper" data-sly-list="${ data.items }">
             <div class="col-xs-12 col-md-4 icon-list-proof-points__item">
               <div class="icon-list-proof-points__image">
                 <img src="${item.image}" alt="${item.title}" />
