--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -18,10 +18,6 @@
     font-weight: bold;
   }
 
-  &__text {
-
-  }
-
   &__symbol {
     position: relative;
   }
@@ -60,6 +56,10 @@
   //-----------------------------------
   @include media-desktop-and-up {
     padding: 42px 0;
+
+    &__wrapper {
+      display: flex;
+    }
 
     &__text {
       font-size: 60px;
