--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -16,7 +16,8 @@
   .icon-list-proof-points__symbol { font-size: 40px; top: 13px; }
   .icon-list-proof-points__title { font-size: 18px; } }
 
-@media screen and (min-width: 992px) { .icon-list-proof-points__text { font-size: 75px; }
+@media screen and (min-width: 992px) { .icon-list-proof-points__wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; }
+  .icon-list-proof-points__text { font-size: 75px; }
   .icon-list-proof-points__symbol { font-size: 45px; top: 8px; }
   .icon-list-proof-points__title { font-size: 24px; } }
 
@@ -38,6 +39,7 @@
   .icon-list-no-image-highlights__title { font-size: 14px; margin-bottom: 5px; } }
 
 @media screen and (min-width: 992px) { .icon-list-no-image-highlights { padding: 42px 0; }
+  .icon-list-no-image-highlights__wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; }
   .icon-list-no-image-highlights__text { font-size: 60px; line-height: 65px; }
   .icon-list-no-image-highlights__symbol { font-size: 40px; top: -15px; }
   .icon-list-no-image-highlights__title { font-size: 18px; margin-bottom: 15px; } }
