Creating data-set with different examples for QA Handoff

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-no-image-highlights-data.js">
+<sly data-sly-use.data="${'../data/view-no-image-highlights-data.js' @testdata=properties.testdata}">
 
   <div class="icon-list-no-image-highlights">
     <div class="container">
