--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -220,6 +220,12 @@ h5, .b-heading-h5 { margin-top: 0; }
 
 @media screen and (min-width: 992px) { .u-visible-desktop { display: block; } }
 
+[data-mobile-rendition] { min-width: 0 !important; }
+
+@media all and (max-width: 979px) { [data-mobile-rendition] { min-width: 1px !important; } }
+
+@media all and (max-width: 767px) { [data-mobile-rendition] { min-width: 2px !important; } }
+
 .button--reset { border: 0; background: none; padding: 0; }
 
 .b-button { background: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; }
