--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -34,15 +34,15 @@
 @media screen and (max-width: 991px) { .icon-list-no-image-highlights { padding: 30px 0; }
   .icon-list-no-image-highlights__item { margin-bottom: 40px; }
   .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; }
-  .icon-list-no-image-highlights__text { font-size: 50px; line-height: 55px; }
-  .icon-list-no-image-highlights__symbol { font-size: 30px; top: -15px; }
-  .icon-list-no-image-highlights__title { font-size: 14px; margin-bottom: 5px; } }
+  .icon-list-no-image-highlights__text { font-size: 3.125em; line-height: 55px; }
+  .icon-list-no-image-highlights__symbol { font-size: 0.6em; top: -15px; }
+  .icon-list-no-image-highlights__title { font-size: 0.875em; margin-bottom: 5px; } }
 
 @media screen and (min-width: 992px) { .icon-list-no-image-highlights { padding: 42px 0; }
   .icon-list-no-image-highlights__wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; }
-  .icon-list-no-image-highlights__text { font-size: 60px; line-height: 65px; }
-  .icon-list-no-image-highlights__symbol { font-size: 40px; top: -15px; }
-  .icon-list-no-image-highlights__title { font-size: 18px; margin-bottom: 15px; } }
+  .icon-list-no-image-highlights__text { font-size: 3.750em; line-height: 65px; }
+  .icon-list-no-image-highlights__symbol { font-size: 0.667em; top: -15px; }
+  .icon-list-no-image-highlights__title { font-size: 1.125em; margin-bottom: 15px; } }
 
 .icon-list { padding: 30px 0; }
 
