--- a/eaton.frontend/src/components/product-tabs-family/css/product-tabs-family.scss
+++ b/eaton.frontend/src/components/product-tabs-family/css/product-tabs-family.scss
@@ -4,12 +4,158 @@
 
 @import "../../../global/css/_config/sass";
 
+@mixin product-tab($radioId) {
+  input[id="#{$radioId}"] {
+    display: none;
+
+    &:target,
+    &:checked {
+      ~ .row {
+        label[for="#{$radioId}"] {
+          background-color: $color__secondary-gray2;
+        }
+
+        div[data-tab-name="#{$radioId}"] {
+          display: block;
+        }
+      }
+    }
+  }
+}
+
 .eaton-product-tabs {
-  padding-top: $spacing__xl;
-  padding-bottom: $spacing__xl;
+  background-color: $color__secondary-gray3;
+
+  &__tab-panel {
+    display: none;
+  }
+
+  label {
+    cursor: pointer;
+    width: 33.333%;
+    text-align: center;
+    float: left;
+    padding: 40px 0;
+
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      &:hover,
+      &:focus,
+      &:active {
+        text-decoration: none;
+      }
+    }
+
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: $color__secondary-gray2;
+    }
+
+    .icon {
+      color: $color__primary-blue;
+      display: block;
+      font-size: 4rem;
+    }
+
+    span {
+      color: $color__primary-blue;
+      display: inline-block;
+      font-size: 1.4rem;
+      padding-top: 8px;
+    }
+  }
+
+  &__dropdown {
+    background-color: $color__green;
+    border: none;
+    color: $color__white;
+    display: inline-block;
+    font-family: Arial; // TODO: replace
+    font-size: 1.8rem;
+    font-weight: bold;
+    height: 57px;
+    margin: 40px 0;
+    width: 100%;
+    position: relative;
+
+    &:focus {
+      .eaton-product-tabs__dropdown__content {
+        display: block;
+      }
+    }
+
+    .icon {
+      display: inline-block;
+      font-size: 14px;
+      padding-left: 10px;
+      vertical-align: middle;
+    }
+
+    &__content {
+      display: none;
+      position: absolute;
+      width: 100%;
+      background-color: $color__secondary-gray3;
+      top: 100%;
+      left: 0;
+      z-index: 10;
+
+      ul {
+        list-style: none;
+        padding: $spacing__sm;
+
+        li {
+          padding: $spacing__sm 0 0 0;
+
+          &:first-child {
+            padding: 0;
+          }
+
+          a {
+            color: $color__primary-gray2;
+            display: inline-block;
+            width: 100%;
+            text-align: left;
+          }
+
+          span {
+            font-size: 1.5rem;
+          }
+
+          .icon {
+            padding: 0 10px 0 0;
+            font-size: 25px;
+          }
+        }
+      }
+    }
+  }
+
+  // light as the default theme
+  @include product-tab('overview');
+  @include product-tab('specifications');
+  @include product-tab('resources');
+
+
 
   @include media-mobile-only {
+    .container {
+      padding: 0;
+    }
 
+    .eaton-product-tabs__dropdown {
+      width: 93%;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+
+    label {
+      padding: 20px 0;
+    }
   }
 
   @include media-desktop-and-up {
