--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/views/view-no-image-highlights.html
@@ -4,12 +4,12 @@
     <div class="container">
       <div class="row">
           <!--/* Icon List */-->
-          <div class="icon-list-no-image-highlights__wrapper" data-sly-list="${ data.items }">
-            <div class="col-xs-12 col-md-4 icon-list-no-image-highlights__item">
+          <div class="icon-list-no-image-highlights__wrapper" data-sly-list.iconItem="${ data.items }">
+            <div class="col-xs-12 col-md-4 ${iconItem.first ? 'test' : ''} icon-list-no-image-highlights__item">
               <div class="icon-list-no-image-highlights__content">
-                <!--/* Post integration - to be mapped with ${item.text} */-->
-                <div class="icon-list-no-image-highlights__title">${item.title}</div>
-                <div class="icon-list-no-image-highlights__text">${item.tcsText @context = 'html'}</div>
+                <!--/* Post integration - to be mapped with ${iconItem.text} */-->
+                <div class="icon-list-no-image-highlights__title">${iconItem.title}</div>
+                <div class="icon-list-no-image-highlights__text">${iconItem.tcsText @context = 'html'}</div>
               </div>
             </div>
           </div>
