--- a/eaton.frontend/src/components/list/css/views/_view-related-products.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-related-products.scss
@@ -1,8 +1,25 @@
 .related-products-component {
 
+  padding-bottom: 75px;
+
   &__card {
     background-color: $color__secondary-gray3;
     padding: 0 15px;
     margin-right: 15px;
+    border: 1px solid $color__secondary-gray2;
+  }
+
+  &__title {
+    padding-top: 15px;
+  }
+
+  &__arrow {
+    bottom: 50%;
+  }
+
+  @include media-desktop-and-up {
+    &__title {
+      padding-top: 30px;
+    }
   }
 }
