--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-related-products.html
@@ -1,47 +1,80 @@
-<div data-sly-use.data="${'../data/view-related-products-data.js'}" class="related-products-component carousel slide" data-ride="carousel" data-pause="hover">
+<!--Desktop Carousel-->
+<div data-sly-use.data="${'../data/view-related-products-data.js'}" class="related-products-component carousel-component carousel slide container desktop-carousel hidden-xs" data-ride="carousel" data-pause="hover">
 
     <!-- Indicators -->
-    <ol data-sly-list.slide="${data.cards}" class="carousel-indicators">
+    <ol data-sly-list.slide="${data}" class="carousel-indicators">
         <li data-target=".carousel-component"
             data-slide-to="${slideList.index}"
-            class="carousel-component__dots ${slideList.index == 0 ? 'active' : ''}"></li>
+            class="carousel-component__dots carousel-component__dots--gray inactive-gray ${slideList.index == 0 ? 'active' : ''}"></li>
     </ol>
 
-    <!-- Wrapper for slides -->
-    <div data-sly-list.slide="${data.cards}" class="carousel-component-slide carousel-inner" role="listbox">
-        <div class="item ${slideList.index == 0 ? 'active' : ''}">
-            <div class="row">
-                <div class="col-sm-3" data-sly-repeat.slide1="${data.cards}">
+     <!--Carousel for Desktop -->
+    <div data-sly-list="${data}" class="carousel-component-slide carousel-inner hidden-xs" role="listbox">
+        <div class="item ${itemList.index == 0 ? 'active' : ''} hidden-xs">
+            <div class="row" data-sly-list="${item.cards}">
+                <div class="col-sm-3">
                     <div class="col-xs-12 related-products-component__card">
-                        <img class="carousel-component-slide__image" src="${slide1.image}" alt="${slide1.alt}">
+                        <img class="carousel-component-slide__image" src="${item.image}" alt="${item.alt}">
                     </div>
                     <div class="col-xs-12">
-                        <p class="b-eyebrow-small">${slide1.title}</p>
-                        <p class="b-h4-link">${slide1.text}</p>
+                        <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
+                        <p class="b-h4-link">${item.text}</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="item">
-            <div class="row">
-                <div class="col-sm-3" data-sly-repeat.slide1="${data.cards}">
-                    <img class="carousel-component-slide__image visible-lg visible-md " src="${slide.image}" alt="${slide.alt}">
+    </div>
+
+    <!--Controls -->
+    <button class="carousel-component__arrow related-products-component__arrow left carousel-control button--reset"
+            role="button">
+        <span class="icon icon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Go to Previous Slide</span>
+    </button>
+    <button class="carousel-component__arrow related-products-component__arrow right carousel-control button--reset"
+            role="button">
+        <span class="icon icon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Go to Next Slide</span>
+    </button>
+</div>
+
+<!--Mobile Carousel-->
+<div data-sly-use.data="${'../data/view-related-products-data.js'}" class="related-products-component carousel-component carousel slide container mobile-carousel visible-xs" data-ride="carousel" data-pause="hover">
+
+    <!-- Indicators -->
+    <ol data-sly-list.data="${data}" class="carousel-indicators">
+        <sly data-sly-list.card="${data.cards}">
+            <li data-target=".carousel-component"
+                data-slide-to="${cardList.index}"
+                class="carousel-component__dots carousel-component__dots--gray inactive-gray ${cardList.index == 0 ? 'active' : ''}"></li>
+        </sly>
+    </ol>
+
+    <!-- Carousel for Mobile -->
+    <div data-sly-list.data="${data}" class="carousel-component-slide carousel-inner visible-xs" role="listbox">
+        <sly  data-sly-list.card="${data.cards}">
+            <div class="item ${cardList.index == 0 ? 'active' : ''}">
+                <div class="col-xs-12 related-products-component__card">
+                    <img class="carousel-component-slide__image" src="${card.image}" alt="${card.alt}">
+                </div>
+                <div class="col-xs-12">
+                    <p class="b-eyebrow-small related-products-component__title">${card.title}</p>
+                    <p class="b-h4-link">${card.text}</p>
                 </div>
             </div>
-        </div>
-
-        <!-- Controls -->
-        <button data-sly-test="${slideList.count > 1}"
-                class="carousel-component__arrow left carousel-control button--reset"
-                role="button">
-            <span class="icon icon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Go to Previous Slide</span>
-        </button>
-        <button data-sly-test="${slideList.count > 1}"
-                class="carousel-component__arrow right carousel-control button--reset"
-                role="button">
-            <span class="icon icon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Go to Next Slide</span>
-        </button>
+        </sly>
     </div>
+
+    <!--Controls -->
+    <button class="carousel-component__arrow related-products-component__arrow left carousel-control button--reset"
+            role="button">
+        <span class="icon icon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Go to Previous Slide</span>
+    </button>
+    <button class="carousel-component__arrow related-products-component__arrow right carousel-control button--reset"
+            role="button">
+        <span class="icon icon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Go to Next Slide</span>
+    </button>
 </div>
+
