--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -12,6 +12,8 @@
 
 .carousel-component__dots:only-child { display: none; }
 
+.carousel-component__dots--gray .inactive-gray { background-color: #EEF0F2; border: 1px solid #EEF0F2; }
+
 .carousel-component__down-arrow { position: absolute; bottom: 25px; color: #FFF; width: 100%; font-size: 1.5em; z-index: 10; text-align: center; }
 
 .carousel-component .carousel-indicators .active { background-color: #005EB8; border: 1px solid #005EB8; }
