--- a/eaton.frontend/src/components/icon-list/css/icon-list.scss
+++ b/eaton.frontend/src/components/icon-list/css/icon-list.scss
@@ -8,6 +8,7 @@
 // Import SubViews
 @import "views/view-proof-points";
 @import "views/view-no-image-highlights";
+@import 'views/view-top-list-with-icon';
 
 
 .icon-list {
