--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -30,6 +30,11 @@ p {
   line-height: 1.3;
 }
 
+a,
+p a {
+  color: $color__primary-blue;
+}
+
 
 // Headings
 //----------------
@@ -79,6 +84,10 @@ h5,
 .b-heading-h5 {
   @extend %h5;
   margin-top: 0;
+
+  a {
+    color: $color__primary-blue;
+  }
 }
 
 //links
