--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-results/css/search-results.css
@@ -1,1 +1,39 @@
-.search-results-simple__item { margin-bottom: 60px; }
+.search-results-simple__header-top, .search-results-simple__header-bottom, .search-results-simple__active-filters, .search-results-simple__filter-link { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+.search-results-simple__sort-options, .search-results-simple__filters-actions { margin-left: auto; }
+
+.search-results-simple__header { margin-bottom: 60px; }
+
+.search-results-simple__header-top { border-bottom: 2px solid #F8F8F8; }
+
+.search-results-simple__title { font-size: 20px; font-weight: bold; }
+
+.search-results-simple__filter-link { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; margin-right: 2rem; }
+
+.search-results-simple__filter-link .icon { font-size: 10px; margin-right: 1rem; }
+
+.eaton-facets { border: 1px solid #CCD2D7; }
+
+@media screen and (max-width: 991px) { .eaton-facets { margin-bottom: 30px; } }
+
+.results-list { padding-bottom: 45px; }
+
+@media screen and (min-width: 992px) { .results-list { padding-bottom: 90px; } }
+
+.results-list-module { display: -webkit-box; display: -ms-flexbox; display: flex; margin-bottom: 30px; }
+
+.results-list-module__image { border: 1px solid #E9E9E9; padding: 1rem; }
+
+.results-list-module__date { color: #98A4AE; font-style: italic; }
+
+.results-list-module__secondary-links { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+@media screen and (max-width: 991px) { .results-list-module--type-family, .results-list-module--type-sku { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; }
+  .results-list-module__image-wrapper { margin-bottom: 20px; }
+  .results-list-module__image { min-width: 300px; max-height: 200px; } }
+
+@media screen and (min-width: 992px) { .results-list-module { margin-bottom: 60px; }
+  .results-list-module__image-wrapper { -ms-flex-preferred-size: 140px; flex-basis: 140px; margin-right: 30px; padding-top: 8px; }
+  .results-list-module__image { max-width: 140px; }
+  .results-list-module__icon-wrapper { -ms-flex-preferred-size: 48px; flex-basis: 48px; margin-right: 30px; padding-top: 8px; }
+  .results-list-module__icon-wrapper .icon { color: #005EB8; font-size: 48px; } }
